@@ -1,5 +1,6 @@
 2002xxxx
  - updated man page
+ - pine import filter update
 
 20021008
  - options.c rewritten (new mutt style rc file support)
